fixed the search bar and added overflow scroll to lyrics

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,19 @@ code {
   flex-direction: column;
   width: 300px;
   padding: 5px;
+  white-space: break-spaces;
+}
+
+.songcard-container h3, h4 {
+  margin: 4px;
+  font-family: 'Permanent Marker', cursive;
+}
+
+.songcard-container p {
+  overflow-y: scroll;
+  width: 100%;
+  max-height: 30%;
+  
 }
 
 .form-songlist-container {
@@ -142,11 +155,6 @@ code {
   max-width: 20%;
   min-width: max-content;
   text-align: center;
-}
-
-.songlist-container img {
-  width: 300px;
-  height: 291px;
 }
 
 /* form button */
@@ -265,9 +273,9 @@ code {
   padding-left: 4px;
 }
 
-.songcard-container h3, h4 {
-  margin: 4px;
-  font-family: 'Permanent Marker', cursive;
+.songlist-container img {
+  width: 300px;
+  height: 291px;
 }
 
 #primary-nav {
@@ -380,9 +388,13 @@ input#search {
 }
 
 .search-songlist-container {
-  display: flex;
   flex-direction: column;
   align-items: center;
+  display: block;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
 
 .submitBtn:hover {
